--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                 </li>
                 <li>
                     <i class="uil uil-envelope"></i>
-                    <h5>support@chronics.com</h5>
+                    <h5>vikrantsinghan5@gmail.com</h5>
                 </li>
                 <li>
                     <i class="uil uil-location-point"></i>
